- Added support for specifying that the value of the attribute condition is 'natural', ie excluding bonuses.
- When attempting to change the mount location of modular cyberware, an error will now be thrown if there are no viable mounts for the selected object. 

Application Fixes:
- Fixed a regression in the behaviour of essence holes incorrectly being saved as 100 times the intended value. 
- Fixed an issue with the Skills tab not showing properly when first creating a character.
- Fixed specialisations not properly being added to dicepool when firing weapons.
- Fixed a regression in the behaviour of shapeshifters in karmagen not automatically selecting 'Human' if the 'None' metavariant is selected.
- Fixed a regression in the behaviour of mastery qualities incorrectly counting towards used spells and karma.
- Fixed issues with copying and pasting cyberware. Note that it's currently not permissible to paste cyberware into other cyberware.
- Fixed extraneous messages about leaving a group when updating character properties if the character is a member of an initiation group.
- Fixed a regression in the behaviour of the spellcategory improvement type that caused all improvements of that type to apply to all spells.
- Fixed an issue with Talent choices not refreshing unless the metavariant index was refreshed.
- Fixed bonuses incorrectly being added twice to cyberlimbs.
- Fixed cyberware improperly being allowed to be flagged as prototype transhuman. Existing cyberware with this flag will be reverted to false.

Data Changes:
- Removed extraneous Magic Sense quality. Closes #4021
- Added support to the SR Missions 1.4 Rules customdata file for the ruling that vehicles without defined sensor functions receive them according to the rating of the sensor array. Closes #2206
- Fixed incorrect name of the aerodynamic molotov cocktail.
- Added conditions to taking the Witness My Hate quality.
- Added metavariant stats for insect spirits.